---------------------------------------------------------------------------------------------------
Version: 0.4.0
Date: ????
  Features:
    - You can now pin the window to look at it and another window at the same time
    - Actually implement the ability to define base items or ignored recipes
  Changes:
    - Refactored dependencyEntry and tierEntry to be the same
    - Changed the dependency graph to only follow the items and fluids
    - Reuse some tables to save memory and allocation
      * Might not actually save very much, and the overhead for caching and seeking them might counteract any gains obtained
    - Refactored into using the event_handler
    - Completely reconstructed the tier menu to use my GUI library Gui Modules
    - Made a tiling background for the bottom of the tier list
    - Fixed save/load issue with timing functions
---------------------------------------------------------------------------------------------------
Version: 0.3.9
Date: 2024-06-30
  Bugfixes:
    - Fixed Py's compatibility (accidentally passed a string instead of an array of strings)
---------------------------------------------------------------------------------------------------
Version: 0.3.8
Date: 2024-06-30
  Changes:
    - Completely refactored how default configs are stored/created
    - Added a helper function to process each element of an array, instead of calling the individual processing function tens of times
  Bugfixes:
    - Fixed the possibility for the menu to be created twice
    - Fixed the chance for functions to accidentally be called twice when using the internal 'tick_later' function (tick 0)
    - Fixed a crash when loading an older save that had an invalidated reference to the menu
---------------------------------------------------------------------------------------------------
Version: 0.3.7
Date: 2024-06-28
  Compatibility:
    - Fixed compatibility for Pyanodons Alternative Energy